usermanagement/kubernetes/usermanagement-frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanagement-web
  labels:
    app: usermanagement-web
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: usermanagement-web
        tier: frontend
    template:
      metadata:
        labels:
          app: usermanagement-web
          tier: frontend
      spec:
        containers:
          - name: usermanagement-web
            image: dak4408/usermanagement-frontend:latest
            ports:
              - name: usermanagement-web
                containerPort: 8081
