usermanagement/kubernetes/usermanagement-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usermanagement-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: traefik
  rules:
      http:
        paths:
          - pathType: Prefix
            path: /users(/|$)(.*)
            backend:
              service:
                name: usermanagement-web-service
                port:
                  number: 8081
